--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/papaparse": "^5.5.0",
     "axios": "^1.6.8",
-    "csv-parser": "^3.0.0",
     "next": "^14.2.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
+    "papaparse": "^5.5.3",
     "react": "^18",
     "react-dom": "^18"
   },
